--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.76MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-14.25MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.63MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-12.04MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.47MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-425.6KB/s(Youtube:不良林), server: sh.xiaohouzi.club, port: 17901, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: sh.xiaohouzi.club}}
+  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-15.27MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-590.4KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 45.78.5.246, port: 51366, type: ss, cipher: aes-256-gcm, password: ERyG9Y6LA7}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-454.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-556.9KB/s(Youtube:不良林), server: f2s.wokuaitule.xyz, port: 21168, type: vmess, uuid: ff4d9b23-23de-374b-8900-aa03ff957e12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: f2s.wokuaitule.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-590.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-454.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-556.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
