--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-6.19MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 23.83.224.101, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2, server: 45.78.6.207, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
-  - {name: 🇺🇸 美国-4.76MB/s(Youtube:不良林), server: 80.251.216.194, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.20MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.43MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-6.03MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 45.78.6.207, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
   - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: 80.251.216.194, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 23.83.224.101, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-524.9KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇨🇳 台湾-1.39MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 23.83.224.101, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 80.251.216.194, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 80.251.216.194, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: 23.83.224.101, port: 29577, type: vmess, uuid: f03691e4-8903-4f31-8095-ea54c4c2a3b5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-307.3KB/s(Youtube:不良林), server: 45.78.6.3, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
